@@ -1,3 +1,7 @@
+2020-08-02  Robby  <robby@periapsis.org>
+
+	* Updated Allocine data source.
+
 2020-07-26  Robby  <robby@periapsis.org>
 
 	* Improved Goodreads importer.
